started working on multiple addons [tests will fail]
Signed-off-by: Ivo Quiring <falk.quiring@gmail.com>